# OmmxQuantumBenchmarks

./: .gitignore  README.md  main.py  pyproject.toml  upload_guide.md
.github/workflows/: jupyter-book-publish.yml  publish.yml  release.yml  test.yml
01-marketsplit/Models/binary_linear/: QOBLIBReader.py  dat_reader.py  model.py  ommx_create.py  sol_reader.py
01-marketsplit/Models/binary_unconstrained/: model.py  sol_reader.py
01-marketsplit/models/binary_unconstrained/: ommx_create.py
01_marketsplit/models/binary_linear/: dat_reader.py  model.py  ommx_create.py  sol_reader.py
01_marketsplit/models/binary_unconstrained/: dat_reader.py  ommx_create.py  sol_reader.py
02-Labs/Models/Integer/: OMMX_create.py  model.py  models.py  sol_reader.py  solve_c_from_x.py
02-Labs/Models/quadratic_unconstrained/: OMMX_create.py  model.py  sol_reader.py
02_labs/models/Integer/: OMMX_create.py
02_labs/models/integer/: ommx_create.py  sol_reader.py
03-birkhoff/Models/integer_linear/: models.py  (+3 more)
07_independentset/instances/: README.md
07_independentset/solutions/: README.md
docs/en/: _config.yml  _toc.yml  index.ipynb  index.md  quickstart.ipynb
docs/ja/: _config.yml  _toc.yml  index.ipynb  quickstart.ipynb  references.bib
misc/: datasets.py  download_ommx.py  requirement.txt  upload_ommx.py
notebooks/: qoblib.ipynb
ommx_oblib/: datasets.py  qoblib.py
ommx_quantum_benchmarks/: qoblib.py  uploader.py
ommx_quantum_benchmarks/qoblib/: __init__.py  definitions.py  qoblib.py  uploader.py
scripts/: upload_ommx.py
tests/ommx_oblib/: mock.py  test_qoblib.py
(+2454 files in other folders)
