[project]
name = "ommx-oblib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jijmodeling>=1.13.0",
    "minto>=1.3.0",
    "numpy>=2.2.6",
    "ommx>=2.0.4",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
