[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ommx_quantum_benchmarks"
dynamic = ["version"]
description = "Quantum Benchmark dataset in OMMX format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jijmodeling>=1.13.0",
    "minto>=1.3.0",
    "numpy>=2.2.6",
    "ommx>=2.0.4",
    "requests>=2.32.4",
]

[tool.setuptools]
packages = ["ommx_quantum_benchmarks"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
docs = [
    "jupyter-book>=1.0.4.post1",
    "matplotlib>=3.10.5",
    "ommx-pyscipopt-adapter>=2.0.9",
    "sphinx-autoapi>=3.6.0",
    "sphinx-copybutton>=0.5.2",
]
